tests/extern_static_failure/error.txt
Parse error: ./tests/extern_static_failure/extern_static_failure.fae, line 7: A static definition does not allow generic attribute
  7| generic T
     ^^^^^^^^^

Parse error: ./tests/extern_static_failure/extern_static_failure.fae, line 9: A static definition does not allow export attribute
  9| export "TODO: Allow exporting"
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Parse error: ./tests/extern_static_failure/extern_static_failure.fae, line 10: A static definition does not allow intrinsic attribute
  10| #intrinsic
      ^^^^^^^^^^

Parse error: ./tests/extern_static_failure/extern_static_failure.fae, line 11: A static definition does not allow lang attribute
  11| #lang "made_up_lang_item"
      ^^^^^^^^^^^^^^^^^^^^^^^^^
